tdf#128794 Chart: Fix OOXML import/export of Radial gradient

Set gradient style to radial.
The X position of gradient center is limited to [10%;100%],
and the Y position of gradient center is limited to [20%;100%],
otherwise gradient is too hidden.

Change-Id: I9bab7b787897bde51a06a950487de9843eb717a3